[package]
name = "dusk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cosmiccrew/dusk"
description = "Cosmic Crew: Dusk is a conceptual, 3d interplanitary base building game."

[workspace]
resolver = "2"
# members = ["tools/*"] #, "crates/*"]

#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
# name = "Cosmic Crew: Dusk"
identifier = "dev.sycro.comsiccrew.dusk"
# icon = ["build/icons"]
resources = ["assets"]

[dependencies]
#the bevy game engine itself
bevy = { version = "0.11.2", features = ["serialize"] }
#a debug menu and interface for visualising component hierarchy and changing values on the fly.
bevy-inspector-egui = "0.20.0"
#3d physics engine in bevy
bevy_rapier3d = { version = "0.22.0", features = ["serde-serialize", "debug-render-3d"]}
#helps with loading assets in a logical, dynamic format.
bevy_asset_loader = { version = "0.17.0", features = ["3d", "standard_dynamic_assets"] }
#handling inputs in a logical, extensible way with options for command combinations or aliases.
leafwing-input-manager = "0.10.0"

#(ser)ialising/(de)serialising library
serde = "1"
#dynamic error handler and logger
anyhow = "1"
#pseudo random number generation
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_rapier3d = { version = "0.22.0", features = ["parallel"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_rapier3d = { version = "0.22.0", features = ["wasm-bindgen"]}

[features]
default = []

dynamic_linking = ["bevy/dynamic_linking"]
ci_testing = ["bevy/bevy_ci_testing"]

[profile.dev]
opt-level = 1
#Large compile-time improvements on macos
# debug = 1

#Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
#High optimisations, but long compile times
opt-level = 3
#Medium optimisations, but shorter compile times
# opt-level = 2

#Profiles for github actions
[profile.actions]
inherits = "dev"
debug = 1
# debug-assertions = false
incremental = false
[profile.actions.package."*"]
opt-level = 0

[profile.actions-windows]
inherits = "actions"
opt-level = 1
#windows will otherwise result in a "too many symbols" error
[profile.actions-windows.package."*"]
opt-level = 2

#Release optimisations
[profile.release]
lto = "thin"
