[package]
name = "kenny_gltf_fixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#temporary fix for cargo-bundle being a bit wierd
# [package.metadata.bundle]


[dependencies]
gltf = { version = "1.2.0", features = ["import"] }
anyhow = "1.0.71"
# ureq = "2.6.2"
# zip = "0.6.6"
